Issue Fix - Keyboard dimensions on Small Devices

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* Themes */
-
 .dark_theme {
 	--bc: #1e1e1e;
 	--tc: white;
@@ -22,13 +20,9 @@
 	--fh: 'Itim', cursive;
 }
 
-/* HTML */
-
 html {
 	background-color: var(--bc);
 }
-
-/* Navbar */
 
 .nav {
 	width: 100%;
@@ -69,7 +63,7 @@ html {
 	animation-timing-function: cubic-bezier(0.5, 0.05, 0.25, 1);
 }
 
-.h3 {
+h3 {
 	color: var(--tc);
 	position: absolute;
 	left: 1rem;
@@ -84,8 +78,6 @@ html {
 	left: 0;
 	position: absolute;
 }
-
-/* Underline */
 
 .underline-container {
 	display: flex;
@@ -115,8 +107,6 @@ html {
 	content: attr(data-before);
 }
 
-/* Keyboard */
-
 .tastiera {
 	display: flex;
 	flex-wrap: wrap;
@@ -141,7 +131,7 @@ html {
 #tastob {
 	margin-left: 0.5rem;
 	margin-top: 0.3rem;
-	width: 4rem;
+	width: 3rem;
 	height: 3rem;
 	font-size: 1.5rem;
     border-radius: 3px;
@@ -158,17 +148,14 @@ html {
 	height: 0;
 }
 
-/* Responsive */
-
 @media screen and (max-width: 768px) {
 	#tasto {
-		width: 2rem;
+		width: 1.5rem;
 		height: 2.5rem;
 		font-size: 1.2rem;
+        flex: 1 1 auto;
 	}
 }
-
-/* Underline-Checked-Styles */
 
 .error {
     border: 1px solid var(--bc) !important;
@@ -184,8 +171,6 @@ html {
     border: 1px solid var(--bc) !important;
     animation: popResultP 1s 1 forwards;
 }
-
-/* Announcer */
 
 .announcer {
 	width: 35rem;
@@ -203,8 +188,6 @@ html {
     z-index: 1;
 	animation: announcer 0.75s forwards;
 }
-
-/* Announcer Animation */
 
 @keyframes announcer {
 	from {
@@ -259,8 +242,6 @@ html {
 	font-family: var(--fh);
 }
 
-/* Theme Change Animations */
-
 @keyframes tchangel {
 	from {
 		transform: translate(-6px);
@@ -281,8 +262,6 @@ html {
 	}
 }
 
-/* Underline-Animations */
-
 @keyframes popText {
     from {
     font-size: 3.3rem;
@@ -292,8 +271,6 @@ html {
     font-size: 3em;
     }
 }
-
-/* Underline-Checked-Animations */
 
 @keyframes popResultC {
     from {
@@ -328,7 +305,5 @@ html {
         background-color: #3a3a3c;
     }
 }
-
-/* Fonts */
 
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
